<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mahasiswa">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:src="@drawable/fotoprofil"
        android:contentDescription="@string/gambar" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/zuhair_rasyid_wafi"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/_10119269_if7"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvKelas"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/zuhair_10119269_mahasiswa_unikom_ac_id"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvDeskripsi"
        android:paddingTop="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/nama_saya_zuhair_rasyid_wafi_asal_saya_dari_cimahi_saya_merupakan_mahasiswa_informatika_unikom_angkatan_2019"
        android:textSize="15sp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>